--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,7 @@ strong {
     color: #1792d2;
     text-decoration: none;
     font-weight: 700;
+    letter-spacing: 1px;
 }
 
 .article-read-more:hover,
@@ -101,6 +102,7 @@ strong {
 .widget-title {
     font-family: 'Ubuntu', sans-serif;
     font-weight: 700;
+    letter-spacing: 2px;
 }
 
 .widget-recent-post-title {
@@ -176,6 +178,8 @@ nav a {
     color: #707070;
     font-weight: 700;
     padding: .25em 0;
+    text-transform: uppercase;
+    letter-spacing: 1px;
 }
 
 nav a:hover,
