--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,7 @@ header {
 
 footer {
     background:#143774;
-    color: white;
+    color: rgb(255, 255, 255, .65);
     text-align: center;
     padding: 3em 0;
 }
